src/main/webapp/resources/css/main.css
/* ... */
#sidebar a[data-toggle="collapse"] {
    position: relative;
}

#sidebar a, a:hover, a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}


#sidebar ul ul a {
    font-size: 1em !important;
    padding-left: 30px !important;
    background: #0d2c64;
}

#sidebar .dropdown-toggle::after {
    top: 6px;
    padding: 0px;
}

@media (max-width: 768px) {
    #entryFormContent {
        width: 100%;
    }
    #entryFormContent.active {
        width: calc(100% - 250px);
    }

    #entry-form {
        margin-top: 0px;
    }
}

ul.CTAs {
    padding: 20px;
}

ul.CTAs a {
    text-align: center;
    font-size: 0.9em !important;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

.wizard-nav-link {
    background: grey;
    color:#fff;
    /*
    background: white;
    color:#607195 !important;
    */
    border-color: #adadad !important;
    height:30px !important;
}

.wizard-form-group {
    margin-bottom: 2px !important;
    margin-top: 2px !important;
}





.heading-elements {
    top:6px !important;
}

.col {
    padding-right: 0px;
    padding-left: 0px;
}

.ft-x{
    padding-left: 5px;
}
.ft-buttons {
    vertical-align: middle;
}

.card {
    margin-top: 22px;
    margin-bottom: 15px;
    width: auto;
    padding-right: 0px;
    padding-left: 0px;
}

.card-title {
    font-size:1.0em !important;
}

.card-button-title {
    text-align: center;
}


.card-header {
    word-wrap:normal;
    color: #FFFFFF;
    /*background: #0b2b65;*/
    background-image: linear-gradient(to left, rgba(11,43,101,0.55), rgba(11,43,101,0.80));
}

.card-header-unbounded {
    margin-bottom: 12px;
}

.card-header .heading-elements {
    right: 5px;
}

.card-body {
    flex-flow: column nowrap;
}

.card-rounded {
    border-radius: 25px;
}

.card-icon {
    margin-right: 5px;
}

.add-card-header {
    color: #0b2b65;
    background-image: none;
    background-color: transparent;
    border-bottom: none;
}

.card-footer {
    border-top: 1px solid #EEEEEE;
    text-transform: uppercase;
    padding: 0.375rem 1.25rem;
    text-align: right;
    color: #fff;
    background-image: linear-gradient(to right, rgba(11,43,101,0.55), rgba(11,43,101,0.80));
}

.card-header-tabs{
    padding-top: 10px;
}

.card-button {
    padding-top: 15px;
}

::-webkit-input-placeholder {
    color: peachpuff;
    font-size: 10px;
}
::-moz-placeholder {
    color: peachpuff;
    font-size: 10px;
}
:-ms-input-placeholder {
    color: peachpuff;
    font-size: 10px;
}
::placeholder {
    color: peachpuff;
    font-size: 10px;
}

